<resources>
    <string name="app_name">browser</string>


    <string name="jin_tutorial_text">Click the tab icon or touch-slide from left edge to right to get more features.</string>


    <string name="url_share_sms">Share url with sms</string>
    <string name="url_share_talk">Share url with talk</string>
    <string name="added_bookmark">has been added to bookmark</string>
    <string name="removed_bookmark">has been removed from bookmark</string>
    <string name="left_fragment_title_tabs">Tabs</string>
    <string name="left_fragment_title_address">Contacts</string>
    <string name="gesture_setting_txt">Gesture setting</string>
    <string name="gesture_enable_txt">Enable Gesture</string>
    <string name="gesture_bookmark_txt">Bookmark</string>
    <string name="gesture_remove_bookmark_txt">Remove Bookmark</string>
    <string name="gesture_capture_txt">Capture Screen</string>
    <string name="gesture_visible_txt">Visible Gesture</string>
    <string name="jin_close_txt">Close</string>
    <string name="jin_copy_txt">Copy</string>
    <string name="jin_delete_txt">Delete</string>
    <string name="jin_yes_txt">Yes</string>
    <string name="jin_start_txt">Start</string>
    <string name="jin_no_txt">No</string>
    <string name="jin_send_txt">Send</string>
    <string name="jin_re_send_txt">Re-Send</string>
    <string name="jin_retry_txt">Retry</string>
    <string name="jin_confirm_txt">Confirm</string>
    <string name="jin_password_txt">Password(more than 4 digits)</string>
    <string name="jin_password_confirm_txt">Confirm Password</string>
    <string name="jin_password_too_short_txt">Password is more than 4 digits.</string>
    <string name="jin_password_not_match_txt">Password do not match.</string>
    <string name="jin_sign_verify_fail_txt">Verify failed</string>
    <string name="jin_simple_join_txt">Please input your name</string>
    <string name="jin_to_me_txt">To Me</string>
    <string name="add_contact_txt">Add Contact</string>
    <string name="remove_contact_txt">Remove Contact and delete all message</string>
    <string name="default_dialog_title_txt">Notice</string>
    <string name="do_no_use_txt">This user do not use JIN Browser</string>
    <string name="security_talk_txt">Start security talking</string>
    <string name="address_allow_permission">Allow permission to talk with your friends</string>
    <string name="tab_title_txt">TAB</string>
    <string name="talk_title_txt">TALK</string>
    <string name="music_title_txt">MUSIC</string>
    <string name="music_cannot_playing_file">Can not delete playing music file</string>
    <string name="music_all_play">Play All</string>
    <string name="setting_title_txt">SETTING</string>
    <string name="setting_full_screen_txt">Full Screen</string>
    <string name="setting_visible_menu_bar_txt">Show Bottom MenuBar</string>
    <string name="setting_url_txt">Default Url</string>
    <string name="setting_about_txt">About</string>
    <string name="setting_privacy_tab">Open Privacy Tab</string>
    <string name="setting_font_size">Font Size</string>
    <string name="setting_no_use_cache">No Use Cache</string>
    <string name="setting_activate_add_block">Activate Url Block</string>
    <string name="setting_clear_add_block">Clear Blocked URL</string>
    <string name="setting_clear_cookie">Clear Cookies</string>
    <string name="setting_clear_cache">Clear Cache(Include WebStorage)</string>
    <string name="secret_talk_name">Secret Talk</string>
    <string name="talk_sign_message">Send Secret Message</string>
    <string name="talk_received_sign_message">Secret Signed-Message arrived</string>
    <string name="talk_verify_message">Verify Signed Message</string>
    <string name="talk_setting_sign_password">Setting Password for Secret Message</string>
    <string name="talk_server_error">Server connection is failed</string>
    <string name="talk_server_busy">User maximum connection exceeded</string>
    <string name="talk_server_reconnect">Server connection is failed. Reconnect?</string>
    <string name="talk_email_use">Your email is only used for authenticate</string>
    <string name="talk_email_input_error">Enter your email correctly</string>
    <string name="talk_authenticate_code">Authenticating Code</string>
    <string name="talk_authenticate_code_error">Authenticate code invalid</string>
    <string name="talk_user_del">Delete User</string>
    <string name="talk_exit_group">Exit talk group</string>
    <string name="talk_exit_group_notice"> left the Talk Group</string>
    <string name="talk_unable_send_message">Could not send message</string>
    <string name="talk_on_the_video_chat">On the video chat</string>
    <string name="talk_with_user">Talk with user</string>
    <string name="talk_delete_message">Delete selected message?</string>
    <string name="talk_delete_message_with_other">Delete selected message?\nThe other party message will also be deleted.</string>
    <string name="talk_message_title">Chat Message</string>
    <string name="talk_delete_all_message">Delete all messages</string>
    <string name="talk_req_video_chat">Request video chat</string>
    <string name="talk_menu_req_video_chat">Video chat</string>
    <string name="talk_cancel_req_video_chat">The requested video chat has been canceled</string>
    <string name="talk_received_attachment">Attachment arrived</string>
    <string name="talk_error_video_chat">Error occurred during video chat</string>
    <string name="talk_finish_video_chat">Your friend has ended the video chat.</string>
    <string name="talk_accept_video_chat">Your friend accepted the video chat.</string>
    <string name="talk_reject_video_chat">Your friend rejected the video chat.</string>
    <string name="talk_with_other">Would you like to open a new chat window after closing the current window?</string>
    <string name="talk_block_user">Block User</string>
    <string name="talk_confirm_block_user">Are you sure you want to block users?</string>
    <string name="talk_unblock_user">Unblock User</string>
    <string name="talk_unblock_and_talk_with_user">Unblock and Talk with User</string>
    <string name="talk_setting_block_title">Setting Block User</string>
    <string name="talk_setting_normal_mode">Switch to Normal Talk</string>
    <string name="talk_setting_security_mode">Switch to Security Talk</string>
    <string name="talk_setting_password_title">Setting Password</string>
    <string name="talk_setting_alarm_on">Message Alarm On</string>
    <string name="talk_setting_alarm_off">Message Alarm Off</string>
    <string name="talk_setting_reinforce_security_on">Enable Additional Apply RSA Key Exchange</string>
    <string name="talk_setting_reinforce_security_off">Disable Additional Apply RSA Key Exchange</string>
    <string name="talk_setting_import_contact">Import contacts</string>
    <string name="talk_setting_make_group">Make Group</string>
    <string name="talk_setting_delete_checked">Delete Checked Contact</string>
    <string name="talk_setting_profile">Setting Profile</string>
    <string name="talk_setting_my_phone_num">My Phone-Number</string>
    <string name="talk_alert_set_profile">Please set up your profile first.</string>
    <string name="music_setting_always_foreground_yes">Playback of foreground music</string>
    <string name="music_setting_always_foreground_no">Cancel playback of foreground music</string>
    <string name="music_setting_chromecast">Send to Chromecast Supported Device</string>
    <string name="music_setting_onpen_dir">Music Directory</string>
    <string name="music_setting_load_broadcast">Music Broadcast List</string>
    <string name="music_play_pls_file">Play now?</string>
    <string name="tab_setting_open_new">New Tab</string>
    <string name="tab_setting_close_all">Close All Tab</string>
    <string name="now_construct">Coming soon</string>
    <string name="confirm_delete_file">Delete selected file?</string>
    <string name="webview_load_url">Move to site</string>
    <string name="webview_load_new_tab">Open in new tab</string>
    <string name="webview_copy_url">Copy Url</string>
    <string name="webview_download_image">Download Image</string>
    <string name="webview_download_confirm">Download now?</string>
    <string name="webview_forward">Forward</string>
    <string name="webview_share">Share</string>
    <string name="webview_search_word">Search Word</string>
    <string name="do_block_url">Block Url</string>
    <string name="exist_block_url">Url is exist.</string>
    <string name="clear_block_url">Cleared Blocked Url</string>
    <string name="clear_cookie_complete">Cleared Cookies</string>
    <string name="clear_cache_complete">Cleared Cache</string>
    <string name="allowed_blocked_url">Allowed Blocked Url</string>
    <string name="error_add_group_no_selected_contact">Add group after select contact</string>
    <string name="notice_product_free">This feature is not available for free version.</string>
    <string name="notice_product_free_1">Video-Talk were limited due to insufficient server capacity. </string>
    <string name="alert_move_to_url">Would you like to go to the URL below?</string>
    <string name="alert_3g_lte">Data charges may be charged in 3G / LTE environments.</string>
    <string name="alert_max_message_size_over">The maximum length of the message that can be sent is exceeded. </string>

    <string name="permission_notice_title">JIN(talk-browser) requires the following permissions.</string>
    <string name="permission_phone">[Phone]</string>
    <string name="permission_notice_phone">It is used as a device unique ID (hash value) for messenger use.</string>
    <string name="permission_camera">[Camera]</string>
    <string name="permission_notice_camera">This permission is required for video call.</string>
    <string name="permission_mic">[MIC]</string>
    <string name="permission_notice_mic">This permission is required for video call.</string>
    <string name="permission_storage">[Storage]</string>
    <string name="permission_notice_storage">This permission is required for photo transfer,web browser file download and music play.</string>
    <string name="permission_contacts">[Contacts]</string>
    <string name="permission_notice_contacts">This permission is required for import contacts on messenger</string>
    <string name="permission_gps">[Location]</string>
    <string name="permission_notice_gps">This permission is required for map in web browser</string>
    <string name="permission_finish">Finish</string>
    <string name="permission_agree">Agree(and Use)</string>
</resources>
