<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/jin_dialog_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:id="@+id/jin_dialog_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="Dialog_Title"/>

                <ImageView
                    android:id="@+id/jin_dialog_title_close_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:src="@drawable/ic_clear_search_api_holo_light"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#B3B3B3"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/default_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="10dp">

            <TextView
                android:id="@+id/content_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="" />
            <ListView
                android:id="@+id/jin_dialog_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"/>


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>



    <LinearLayout
            android:id="@+id/about_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            android:padding="10dp">

            <TextView
                android:id="@+id/about_content_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:text="" />

            <EditText
                android:id="@+id/about_package_signature_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:lines="15"
                android:scrollbars="vertical"
                android:gravity="top|left"
                android:textAlignment="gravity"
                android:inputType="textMultiLine"/>


            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/req_video_chat_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>





        <LinearLayout
            android:id="@+id/input_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="10dp">

            <TextView
                android:id="@+id/talk_input_pwd_notice"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="gone"
                android:textColor="@color/colorAccent"
                />
            <EditText
                android:id="@+id/talk_input_pwd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="10"
                android:textSize="12dp"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/jin_password_txt" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/add_group_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="10dp">

            <FrameLayout
                android:id="@+id/talk_group_contacts_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:id="@+id/talk_group_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </FrameLayout>


            <EditText
                android:id="@+id/talk_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Group Name" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/webview_search_word_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="10dp">

            <EditText
                android:id="@+id/webview_search_word_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Search" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/gesture_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/enable_gesture_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gesture_enable_txt" />

                <CheckBox
                    android:id="@+id/enable_gesture_cbx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/visible_gesture_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gesture_visible_txt" />

                <CheckBox
                    android:id="@+id/visible_gesture_cbx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/gesture_bookmark" />

                        <android.support.v4.widget.Space
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:text="@string/gesture_bookmark_txt" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/gesture_bookmark_cbx"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/gesture_remove_bookmark" />

                        <android.support.v4.widget.Space
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:text="@string/gesture_remove_bookmark_txt" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/gesture_remove_bookmark_cbx"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/gesture_screen_capture" />

                        <android.support.v4.widget.Space
                            android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:text="@string/gesture_capture_txt" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/gesture_capture_cbx"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                </LinearLayout>

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_default_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_ok_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OK"
                android:background="#2196F3"
                android:padding="10dp"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
